# habutax

./: MANIFEST.in  Makefile  README.md  __main__.py  fields.py  forms.py  inputs.py  setup.cfg  solver.py
.github/workflows/: package.yml  test.yml
doc/: adding_modifying_forms.md  solver.md
habutax/: __init__.py  __main__.py  enum.py  fields.py  form.py  inputs.py  pdf_fields.py  pdf_filler.py  solver.py  values.py
habutax/forms/: __init__.py
habutax/forms/ty2021/: __init__.py  f1040.py  f1040_figure_tax.py  f1040_qualdiv_capgain_tax_wkst.py  f1040_recovery_rebate_credit_wkst.py  f1040_s1.py  f1040_s2_need6251.py  f1040_s3.py  f1040_s8812.py  f1040_sa.py  f1040_sb.py  f1098.py  f1099_div.py  f1099_g.py  f1099_int.py  f1099_r.py  f8606.py  f8889.py  f8959.py  f8995.py  fnc_d_400.py  fnc_d_400_child_deduction_wkst.py  fnc_d_400_consumer_use_tax_wkst.py  fnc_d_400_sa.py  fnc_d_400_ss.py  fw_2.py
habutax/forms/ty2022/: __init__.py  f1040.py  f1040_figure_tax.py  (+22 more)
pytax/: __init__.py  __main__.py  fields.py  form.py  forms.py  inputs.py  solver.py  values.py
pytax/forms/: __init__.py
scripts/: pdf_fields_to_dict.py
tests/: context.py  test_2021_tax_tables.py  test_documentation.py  test_enum.py  test_fields.py  test_form.py  test_inputs.py  test_solver.py
tests/ty2021/: test_1040.py  test_2021_tax_tables.py  test_f1040.py  test_f1040_s1.py  test_f1040_s3.py  test_fw_2.py
tests/ty2022/: test_2021_tax_tables.py  test_2022_tax_tables.py  test_f1040.py  test_f1040_s1.py  test_f1040_s3.py  test_fw_2.py
tests/ty2023/: test_2023_tax_tables.py  test_f1040.py  test_f1040_s1.py  test_f1040_s3.py  test_fw_2.py
(+35 files in other folders)
