[metadata]
name = habutax
version = 0.0.2
author = Aaron Lindsay
author_email = habutax@gmail.com
description = Open-source tax solver for US personal income tax returns
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/habutax/habutax
project_urls =
    Bug Tracker = https://github.com/habutax/habutax/issues
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Environment :: Console
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)

[options]
packages = find:
python_requires = >=3.8
include_package_data = True

[options.entry_points]
console_scripts =
    habutax = habutax:main
